# edge-deploy-core

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  README.md  config.example.yaml  edge_console.py  prototype_paramiko_transport.py  pyproject.toml
.claude/: launch.json
.github/: pull_request_template.md
docs/: DESIGN.md  PHASE2-IMPLEMENTATION-PLAN.md  architecture.html  release-workflow.md
edge_deploy/: __init__.py  __main__.py  _prototype_paramiko_transport.py  audit.py  auth.py  cli.py  config.py  dependencies.py  drift.py  ledger.py  local_check.py  mirror.py  posture.py  preflight.py  progress.py  publish.py  python_env.py  release.py  remote_paths.py  remote_python.py  reporting.py  repository.py  rollout.py  runner.py  ssh_transport.py  tmux_driver.py  transport.py  transport_smoke.py  verify.py
plans/: 001-hermetic-money-path-tests.md  002-stage-evidence-linewrap.md  003-ci-gates.md  004-release-ledger-architecture.md  005-release-ledger-pr-breakdown.md  006-paramiko-persistent-ssh-prototype.md  007-drift-d8-file-evidence.md  008-coverage-measurement.md  009-error-path-test-hardening.md  010-transient-secret-redaction-registry.md  011-paramiko-transport-productization.md  012-reuse-release-verification.md  README.md
scripts/: e2e-release.ps1
tests/: conftest.py  test_audit.py  test_auth_seam.py  test_cli.py  test_config.py  test_dependencies.py  test_drift.py  test_e2e_release_script.py  test_edge_console.py  test_ledger.py  test_local_check.py  test_mirror.py  test_onboarding_checks.py  test_onboarding_cli.py  test_phases.py  (+28 more)
(+44 files in other folders)
