[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-deploy-core"
version = "1.2.4"
description = "Shared deployment toolkit that rolls a reviewed build of a Tool (autobench, robocop/Dispatch) out to the Hadoop Edge Nodes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-xdist>=3.6", "ruff>=0.4"]

[project.scripts]
edge-deploy = "edge_deploy.cli:main"

[tool.setuptools.packages.find]
include = ["edge_deploy*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
